--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>rutas-optimas</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Cj83JhIz00MNyvTZ7fNmqJs6sgu8OSE"></script>
   </head>
   <body>
     <noscript>
